# withings_syncer

./: .gitignore  README.md  pyproject.toml  withings2intervals.py
.github/workflows/: python-publish.yml
withings2intervals/: config_example.ini  withings2intervals.py
