[tool.poetry]
name = "withings2intervals"
version = "0.1.0"
description = "Sync Withings data to Intervals.icu"
authors = ["Stefano Mosconi <stefano.mosconi@gmail.com>"]
readme = "README.md"
packages = [{ include = "withings2intervals" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
