[tool.poetry]
name = "withings2intervals"
version = "0.1.2"
description = "Sync Withings data to Intervals.icu"
authors = ["Stefano Mosconi <stefano.mosconi@gmail.com>"]
readme = "README.md"
packages = [{ include = "withings2intervals" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
colorama = "^0.4.6"

[tool.poetry.scripts]
withings2intervals = "withings2intervals.withings2intervals:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
